Thu Jun 13 06:12:18 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (integer_unpack_num_bdigits_small): Fix a compile error on
	  clang -Werror,-Wshorten-64-to-32
	  Reported by Eric Hodel.  [ruby-core:55467] [Bug #8522]

Thu Jun 13 05:32:13 2013  Eric Hodel  <drbrain@segment7.net>

	* ext/socket/extconf.rb:  Enable RFC 3542 IPV6 socket options for OS X
	  10.7+.  [ruby-trunk - Bug #8517]

Thu Jun 13 00:17:18 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_integer_unpack_2comp): New function.
	  (rb_integer_unpack_internal): Extracted from rb_integer_unpack and
	  nlp_bits_ret argument added.
	  (integer_unpack_num_bdigits_small): nlp_bits_ret argument added to
	  return number of leading padding bits.
	  (integer_unpack_num_bdigits_generic): Ditto.

	* internal.h (rb_integer_unpack_2comp): Declared.

	* pack.c (pack_unpack): Use rb_integer_unpack_2comp and
	  rb_integer_unpack.

Wed Jun 12 23:27:03 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (mod_using): new method Module#using, which activates
	  refinements of the specified module only in the current class or
	  module definition.  [ruby-core:55273] [Feature #8481]

	* test/ruby/test_refinement.rb: related test.

Wed Jun 12 22:58:48 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* safe.c (rb_set_safe_level, safe_setter): raise an ArgumentError
	  when $SAFE is set to 4.  $SAFE=4 is now obsolete.
	  [ruby-core:55222] [Feature #8468]

	* object.c (rb_obj_untrusted, rb_obj_untrust, rb_obj_trust):
	  Kernel#untrusted?, untrust, and trust are now deprecated.
	  Their behavior is same as tainted?, taint, and untaint,
	  respectively.

	* include/ruby/ruby.h (OBJ_UNTRUSTED, OBJ_UNTRUST): OBJ_UNTRUSTED()
	  and OBJ_UNTRUST() are aliases of OBJ_TAINTED() and OBJ_TAINT(),
	  respectively.

	* array.c, class.c, debug.c, dir.c, encoding.c, error.c, eval.c,
	  ext/curses/curses.c, ext/dbm/dbm.c, ext/dl/cfunc.c,
	  ext/dl/cptr.c, ext/dl/dl.c, ext/etc/etc.c, ext/fiddle/fiddle.c,