@@ -1,3 +1,11 @@
+Thu Jun 13 10:47:16 2013  Shugo Maeda  <shugo@ruby-lang.org>
+
+	* bootstraptest/test_autoload.rb, bootstraptest/test_method.rb:
+	  remove tests for $SAFE=4.
+
+	* lib/pp.rb: use taint instead of untrust to avoid warnings when
+	  $VERBOSE is set to true.
+
 Thu Jun 13 06:12:18 2013  Tanaka Akira  <akr@fsij.org>
 
 	* bignum.c (integer_unpack_num_bdigits_small): Fix a compile error on
